--- a/men.html
+++ b/men.html
@@ -177,36 +177,34 @@
 
 
 
-            <ul class="navbar-nav ml-auto" style="">
+         <ul class="navbar-nav ml-auto" >
                 <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:5500/index.html"
+                    <a class="nav-link" href="http://127.0.0.1:5501/index.html"
                         style="color: white;margin-top: 10px;">HOME</a>
                 </li>
 
                 <li class="nav-item2" style="margin-top: 10px;">
-                    <a class="nav-link" href="http://127.0.0.1:5500/sign.html" style="color: white;">SIGNUP
+                    <a class="nav-link" href="http://127.0.0.1:5501/sign.html" style="color: white;">SIGNUP
                 </li>
                 <li class="nav-item dropdown" style="margin-top: -7px;">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" style="color: white;">CATEGORY
+                    <a class="nav-link dropdown-toggle"data-toggle="dropdown" href="" style="color: white;">CATEGORY
                         <div class="dropdown-menu" style="background-color: #1f2647;">
-                            <a class="dropdown-item" style="color: white;" href="http://127.0.0.1:5500/men.html">Men</a>
-                            <a class="dropdown-item" style="color: white;"
-                                href="http://127.0.0.1:5500/women.html">Women</a>
-                            <a class="dropdown-item" style="color: white;"
-                                href="http://127.0.0.1:5500/kids.html">Kids</a>
-                        </div>
+                            <a class="dropdown-item" style="color: white;" href="http://127.0.0.1:5501/men.html">Men</a>
+                            <a class="dropdown-item"  style="color: white;" href="http://127.0.0.1:5501/women.html">Women</a>
+                            <a class="dropdown-item"  style="color: white;" href="http://127.0.0.1:5501/kids.html">Kids</a>
+                            </div>
                 </li>
-
+              
                 <li class="nav-item2" style="margin-top: 10px;margin-left: 10px;">
-                    <a class="nav-link" href="http://127.0.0.1:5500/cart.html" style="color: white;">CART
+                    <a class="nav-link" href="http://127.0.0.1:5501/shop.html" style="color: white;">CART
                 </li>
                 <li class="nav-item5" style="margin-top: -8px;">
-                    <a href="#"> <button style="border: 2px solid white;font-size: 14px;" type="button"
-                            class="btn btn- text-white" data-toggle="modal" data-target="#myModal">
+                    <a href="#"> <button style="border: 2px solid white;font-size: 14px;" type="button" class="btn btn- text-white" data-toggle="modal"
+                            data-target="#myModal">
                             LOGIN
                         </button>
                     </a>
-
+                    
                 </li>
 
 
