--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ html{
                 </div>
 
                 <div class="card">
-                    <img  style=" border-radius: 24px 24px 0px 0px;background-color: red;" src="https://rukminim1.flixcart.com/image/800/960/ku2zjww0/t-shirt/5/o/6/s-j20j2168130gk-calvin-klein-jeans-original-imag7a4rezcbbggh.jpeg?q=50"
+                    <img  style=" border-radius: 24px 24px 0px 0px;" src="https://rukminim1.flixcart.com/image/800/960/ku2zjww0/t-shirt/5/o/6/s-j20j2168130gk-calvin-klein-jeans-original-imag7a4rezcbbggh.jpeg?q=50"
                         alt="" class="card-img-top">
                     <div class="card-body">
                         <h4 style="text-align: center;margin-top: px;" class="card-title">Calvin Klein </h4>
@@ -420,7 +420,7 @@ html{
                 </div>
 
                 <div class="card">
-                    <img style=" border-radius: 24px 24px 0px 0px;background-color: red;" src="https://rukminim1.flixcart.com/image/800/960/ktaeqvk0/t-shirt/l/y/x/m-13621494-roadster-original-imag6nt23kdhczy5.jpeg?q=50"
+                    <img style=" border-radius: 24px 24px 0px 0px;" src="https://rukminim1.flixcart.com/image/800/960/ktaeqvk0/t-shirt/l/y/x/m-13621494-roadster-original-imag6nt23kdhczy5.jpeg?q=50"
                         alt="" class="card-img-top">
                     <div class="card-body">
                         <h4 style="text-align: center;" class="card-title">JACK & JONES </h4>
